Fixes scrollbar

--- a/assets/default.css
+++ b/assets/default.css
@@ -10,6 +10,7 @@ color: #8c0b11;
 
 ul.lineal{
   margin:0;
+  overflow: hidden;
 }
 ul.lineal li{
   display:inline-block;
@@ -142,4 +143,5 @@ div#footer p {
 	font-size: 20px;
 	color: #6b6b6b;
 	margin: 0px;
+	overflow: hidden;
 }
